Finished until question 2

--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -33,12 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Boston housing dataset has 489 data points with 4 variables each.\n"
+     ]
+    }
+   ],
    "source": [
+    "#!/usr/bin/env python -W ignore::DeprecationWarning\n",
     "# Import libraries necessary for this project\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -54,6 +63,8 @@
     "data = pd.read_csv('housing.csv')\n",
     "prices = data['MEDV']\n",
     "features = data.drop('MEDV', axis = 1)\n",
+    "\n",
+    "#print data\n",
     "    \n",
     "# Success\n",
     "print \"Boston housing dataset has {} data points with {} variables each.\".format(*data.shape)"
@@ -83,26 +94,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statistics for Boston housing dataset:\n",
+      "\n",
+      "Minimum price: $105,000.00\n",
+      "Maximum price: $1,024,800.00\n",
+      "Mean price: $454,342.94\n",
+      "Median price $438,900.00\n",
+      "Standard deviation of prices: $165,340.28\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Minimum price of the data\n",
-    "minimum_price = None\n",
+    "minimum_price = prices.min()\n",
     "\n",
     "# TODO: Maximum price of the data\n",
-    "maximum_price = None\n",
+    "maximum_price = prices.max()\n",
     "\n",
     "# TODO: Mean price of the data\n",
-    "mean_price = None\n",
+    "mean_price = prices.mean()\n",
     "\n",
     "# TODO: Median price of the data\n",
-    "median_price = None\n",
+    "median_price = prices.median()\n",
     "\n",
     "# TODO: Standard deviation of prices of the data\n",
-    "std_price = None\n",
+    "std_price = prices.std()\n",
     "\n",
     "# Show the calculated statistics\n",
     "print \"Statistics for Boston housing dataset:\\n\"\n",
@@ -131,7 +156,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: ** Baseado nas características:\n",
+    "\n",
+    "- Se o **RM** aumentar, automaticamente o preço médio (MEDV) deverá aumentar proporcionamente, e vice-versa. Pois casas com mais quartos se tornariam mais valorizadas, e consequentemente aumentaria o valor base das casas alterando a média.\n",
+    "- Se o **LSTAT** aumentar, não sei dizer se afetaria a média dos preços (MEDV) diretamente. Porque não consegui enchergar uma correlação entre as características. \n",
+    "- Se **PTRATIO** aumentar, talvez aumentaria proporcionamente o preço médio (MEDV), pois acredito que casas próximas a escolas são mais valorizadas, portanto consequementemente, afetaria a média.\n",
+    "\n",
+    "Em relação as casas que possuem '**RM**' de **6**, pode ser que elas não possuam o mesmo preço que casas com '**RM**' **7**. Pois esse preço médio deverá ser afetado diretamente pelas características das taxas de RM e PTRATIO. Então os preços deverão depender diretamente dessas características."
    ]
   },
   {
@@ -160,20 +191,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# TODO: Import 'r2_score'\n",
+    "from sklearn.metrics import r2_score \n",
     "\n",
     "def performance_metric(y_true, y_predict):\n",
     "    \"\"\" Calculates and returns the performance score between \n",
     "        true and predicted values based on the metric chosen. \"\"\"\n",
     "    \n",
     "    # TODO: Calculate the performance score between 'y_true' and 'y_predict'\n",
-    "    score = None\n",
+    "    score = r2_score(y_true, y_predict);\n",
     "    \n",
     "    # Return the score\n",
     "    return score"
@@ -200,11 +232,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model has a coefficient of determination, R^2, of 0.923.\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate the performance of this model\n",
     "score = performance_metric([3, -0.5, 2, 7, 4.2], [2.5, 0.0, 2.1, 7.8, 5.3])\n",
@@ -215,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:** Model has a coefficient of determination, R^2, of 0.923."
    ]
   },
   {
@@ -234,16 +274,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.744897959184\n",
+      "Training and testing split was successful.\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Import 'train_test_split'\n",
+    "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.svm import SVC\n",
     "\n",
     "# TODO: Shuffle and split the data into training and testing subsets\n",
-    "X_train, X_test, y_train, y_test = (None, None, None, None)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(data, prices, test_size = 0.2, train_size = 0.8, random_state = 4)\n",
+    "\n",
+    "clf = SVC(kernel='linear', C=1)\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "print clf.score(X_test, y_test)\n",
     "\n",
     "# Success\n",
     "print \"Training and testing split was successful.\""
@@ -599,7 +655,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -613,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.8"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
