Finished unitl question 6

--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -33,11 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\python27\\lib\\site-packages\\sklearn\\cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
+      "c:\\python27\\lib\\site-packages\\sklearn\\learning_curve.py:23: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the functions are moved. This module will be removed in 0.20\n",
+      "  DeprecationWarning)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -372,7 +382,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** O segundo gráfico com '**max_depth**' igual a 3. A medida que pontos de treinamentos são adicionados a curva de treinamento a mesma cai cerca de 20% até alcançar 0.8, aparentemente o ponto de equilíbrio. E a curva de teste a medida que pontos de teste são adicionados seu desempenho inicia em 0.6 crescendo cerca de 5% a cada 50 pontos adicionados. O ponto de convergência entre as curvas acontece aproximadamente em ~300 pontos. Além disso, é possível notar que a mancha ao redor da curva de teste quando alcança aproximadamente ~300 diminui sua área de incerteza consideravelmente. Analisando os gráficos, possuir mais pontos de treinamentos poderia beneficar o modelo quando a complexidade **max_depth** fosse 6 e 10."
+    "**Answer: ** O segundo gráfico com '**max_depth**' igual a 3. A medida que pontos de treinamentos são adicionados a curva de treinamento, a mesma cai cerca de 20% até alcançar 0.8, aparentemente o ponto de equilíbrio. E a curva de teste a medida que pontos de teste são adicionados seu desempenho inicia em 0.6 crescendo cerca de 5% a cada 50 pontos adicionados. O ponto de convergência entre as curvas acontece aproximadamente em ~300 pontos. Além disso, é possível notar que a mancha ao redor da curva de teste quando alcança aproximadamente ~300 diminui sua área de incerteza consideravelmente. Analisando os gráficos, possuir mais pontos de treinamentos poderia beneficar o modelo quando a complexidade **max_depth** fosse 6 e 10."
    ]
   },
   {
@@ -420,7 +430,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "\n",
+    "- Com **maximum depth** de 1, o modelo está sobre 'high bias'. Porque se comparar Training Score e Validation Score nesse ponto em relação aos outros pontos, a validação dos dados é a menor registrada, indicando que o modelo possui uma variância muito baixa e consegue generalizar bem os dados. Além de ser possível notar que a mancha verde ao redor da Validation Score é relativamente grande, demonstrando a incerteza das predições.\n",
+    "\n",
+    "- Com **maximum depth** de 10, o modelo está sobre 'high variance', indicando que o modelo não possui uma generalização tão boa e a distância entre o Training Score e Validation Score é relativamente a maior em relação a todos os pontos. A mancha de incerteza dos pontos Validation Score está bem maior do que **maximum depth** 1."
    ]
   },
   {
@@ -435,7 +449,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: ** \n",
+    "\n",
+    "Acredito que **maximum depth** 4. Pois possui o maior score alcançado e a menor distância entre Training Score e Validation Score, indicando previsões mais precisas. Além disso é possível notar que a mancha da incerteza nos pontos de Validation Score são bem menores do que os outros pontos registrados. Isso significa 'low variance', onde o modelo consegue ser bem generalizado. "
    ]
   },
   {
